<resources>
    <string name="app_name">SignifyBasic</string>
    <string name="achievements">Achievements</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="achievements_page">Achievements Page</string>
    <string name="notification_page">Notification Page</string>
    <string name="title_activity_test_knowledge">test_knowledge</string>
    <string name="title_activity_selection_game">selection_game</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="dictionary">Dictionary</string>
    <string name="playground">Playground</string>
    <string name="resources">Resources</string>
    <string name="activity_center">Activity Center</string>
</resources>